<resources>
    <string name="app_name">Calculator</string>


    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="enter_the_first_number">Enter the first number</string>
    <string name="first_number">First number</string>
    <string name="second_number">Second number</string>
    <string name="welcome_message">Welcome to My Calculator!</string>
    <string name="about_app">About App</string>
    <string name="calculator">Calculator</string>
    <string name="about_school">About School</string>
    <string name="nav_open">Open</string>
    <string name="nav_close">Close</string>
    <string name="github_code">Github Code</string>
    <string name="school_weblog">School Weblog</string>
    <string name="application">Application</string>
    <string name="text1">این اپلیکیشن توسط سیده بهار رضوی، دانش آموز پایه نهم الف از مدرسه ی دکتر احمدعلیم مروستی لاهیجان و در سال تحصیلی 1401- 1402 ساخته شده است.</string>
    <string name="text2">این برنامه، ماشین حساب ساده ای است که قابلیت محاسبه ی اعداد صحیح و اعشاری در 4 عمل اصلی را دارد و می تواند در حوزه های مختلف مورد استفاده قرار گیرد.
اپ ماشین حساب در اندروید استودیو (َAndroid Studio ) ساخته و با زبان های جاوا (java ) و اکس ام ال (XML ) نوشته شده است. </string>
    <string name="text3">این اپلیکیشن در کافه بازار نیز موجود است و می توانید از این طریق هم آن را نصب کنید.</string>
    <string name="school">مدرسه دکتر احمد علیم</string>
    <string name="text_school1">مدرسه ی زنده یاد دکتر احمد علیم مروستی، دبیرستان دخترانه ی دولتی در شهرستان لاهیجان، استان گیلان است.
این مدرسه به مدیریت خانم اسدپناه اداره می شود.
در سال گذشته، مدرسه ی ما با همکاری آقای رضا مروستی، بازسازی شد و ایشان نام مدرسه را به افتخار برادرشان، زنده یاد علیم مروستی نام گذاری کردند.</string>


</resources>