<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".fragment.AboutAppFragment"
    android:padding="4dp">

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/textview_aboutApp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="درمورد اپلیکیشن"
        android:textSize="@dimen/font_size_large_6x"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="20dp"
        android:textStyle="bold"/>

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/textview_text1_app"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/text1"
        android:layout_marginTop="20dp"
        app:layout_constraintTop_toBottomOf="@+id/textview_aboutApp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:textSize="@dimen/font_size_editText_4x"
        android:layout_margin="20dp"/>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/button_school"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:text="@string/school"
        app:layout_constraintTop_toBottomOf="@+id/textview_text1_app"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="20dp"
        android:background="@color/purple_100"
        android:textColor="@color/white"
        android:textSize="@dimen/font_size_editText_4x"/>

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/textview_text2_app"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/text2"
        android:layout_marginTop="20dp"
        app:layout_constraintTop_toBottomOf="@+id/button_school"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:textSize="@dimen/font_size_editText_4x"
        android:layout_margin="20dp"/>

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/textview_text3_app"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/text3"
        android:layout_marginTop="20dp"
        app:layout_constraintTop_toBottomOf="@+id/textview_text2_app"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:textSize="@dimen/font_size_editText_4x"
        android:layout_margin="20dp"/>



</androidx.constraintlayout.widget.ConstraintLayout>